--- a/front/src/index.css
+++ b/front/src/index.css
@@ -18,6 +18,10 @@
   scroll-behavior: smooth;
 }
 
+.border-gradient {
+  border-image: linear-gradient(to right, blue, purple); border-image-slice: 1; border-radius: 20px;
+}
+
 .text-gradient {
   background: radial-gradient(
     64.18% 64.18% at 71.16% 35.69%,
@@ -67,7 +71,7 @@
 .bg-gray-gradient {
   background: linear-gradient(
     153.47deg,
-    rgba(255, 255, 255, 0) -341.94%,
+    rgba(233, 231, 231, 0) -341.94%,
     #14101d 95.11%
   );
 }
@@ -88,12 +92,24 @@
   text-fill-color: transparent;
 }
 
+.bg-green-gradient {
+  background : linear-gradient(
+    157.81deg,
+    #def9fa -43.27%,
+    #bef3f5 -21.24%,
+    #9dedf0 12.19%,
+    #7deb95 29.82%,
+    #5ce69c 51.94%,
+    #2fda68 90.29%
+  );
+}
+
 .bg-discount-gradient {
   background: linear-gradient(125.17deg, #272727 0%, #11101d 100%);
 }
 
 .box-shadow {
-  box-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
+  box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.25);
 }
 
 .sidebar {
